update page web

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div>
                     <h3>Ingeniero mecatrónico, con interés en Desarrollo de Software, Sistemas Embebidos,
-                        Internet de las Cosas, Maching Learning, Inteligencia Artificial.
+                        Internet de las Cosas, Machine Learning, Inteligencia Artificial.
                     </h3>
                 </div>
             </section>
@@ -161,7 +161,7 @@
 
         <section class="cad">
             <div>
-                <h2 id="software4">Manejo de Software orientado a Diseño CAD</h2>
+                <h2 id="software4">Manejo de Software Orientado a Diseño CAD</h2>
             </div>
             <section class="grid_contener_4">
                 <div item="item1">
@@ -193,7 +193,7 @@
 
         <section class="simulation">
             <div>
-                <h2 id="software5">Manejo de Software orientado a Simulación robótica móvil</h2>
+                <h2 id="software5">Manejo de Software orientado a Simulación Robótica Móvil</h2>
             </div>
             <section class="grid_contener_5">
                 <div item="item1">
@@ -222,6 +222,34 @@
             </section>
         </section>
 
+        <section class="automotriz">
+            <div>
+                <h2 id="software6">Manejo de Software orientado a Sector Automotriz</h2>
+            </div>
+            <section class="grid_contener_6">
+                <div item="item1">
+                    <h3>DOORS IBM</h3>
+                    <img src="./image/automotriz/doorsibm.png" class="rounded mx-auto d-block" id="img_w" alt="Logo doors">
+                </div>
+                <div item="item2">
+                    <h3>Rhapsody</h3>
+                    <img src="./image/automotriz/rhapsody.jpg" class="rounded mx-auto d-block" alt="Logo rhapsody">
+                </div>
+                <div item="item3">
+                    <h3>Tresos</h3>
+                    <img src="./image/automotriz/tresos.png" class="rounded mx-auto d-block" alt="Logo tresos">
+                </div>
+                <div item="item4">
+                    <h3>Aurix Studio</h3>
+                    <img src="./image/automotriz/aurix.png" class="rounded mx-auto d-block" id="img_w" alt="Logo Aurix">
+                </div>
+                <div item="item5">
+                    <h3>MCU Xpresso</h3>
+                    <img src="./image/automotriz/mcuxpresso.png" class="rounded mx-auto d-block" alt="Logo mcuXpresso">
+                </div>
+                
+            </section>            
+        </section>
 
 
     </main>
@@ -237,14 +265,14 @@
             <div item="item_1">
               <h4>Whats App</h4>
               <a class="btn"
-                href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+                href="https://api.whatsapp.com/send?phone=3338441895&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
                 alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
                   alt="Whats App ICon"></a>
             </div>
             <div item="item_2">
               <h4>G-Mail</h4>
               <a class="btn"
-                href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+                href="mailto:davidricardoczjz@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
                 role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
                   alt="Icon G-Mail"></a>
             </div>
