--- a/proyectos.html
+++ b/proyectos.html
@@ -40,6 +40,49 @@
             </div>
         </section>
 
+        <section>
+            <div>
+                <h2>Desarrollo de DCU Door Control Module CTEP 2323</h2>
+            </div>
+            <div class="contener_carrusel">
+                <div id="carouselExampleIndicators" class="carousel slide">
+
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./image/automotriz/Proyectos/DCU.jpg" class="d-block w-100" alt="Empaque2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/automotriz/Proyectos/me.jpg" class="d-block w-50" alt="Empaque">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/automotriz/Proyectos/team_ctep.jpg" class="d-block w-100" alt="Manual">
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
 
         <section>
             <div>
@@ -211,14 +254,14 @@
             <div item="item_1">
               <h4>Whats App</h4>
               <a class="btn"
-                href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+                href="https://api.whatsapp.com/send?phone=3338441895&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
                 alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
                   alt="Whats App ICon"></a>
             </div>
             <div item="item_2">
               <h4>G-Mail</h4>
               <a class="btn"
-                href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+                href="mailto:davidricardoczjz@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
                 role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
                   alt="Icon G-Mail"></a>
             </div>
