--- a/hobie.html
+++ b/hobie.html
@@ -37,9 +37,7 @@
         <h1>Mis Pasa tiempos</h2>
 
           <h2>Video Juegos</h3>
-            <p>Me he divertido jugando diferentes titulos y diferentes Sagas, algunos de mis juegos favoritos de PC,
-              X-Box, y Movil
-            </p>
+            <p>Me he divertido jugando diferentes títulos y diferentes Sagas, algunos de mis juegos favoritos de PC, X-Box, y Móvil. </p>
       </div>
       <div class="container text-center">
         <div class="row">
@@ -143,14 +141,22 @@
     <section class="Series">
       <div>
         <h2>Series o Peliculas</h2>
-        <p>He visto muchas peliculas y series, pero mis favoritas estan relacionadas con videojuegos o con tecnologia,
-          algunas de ellas son las que veras a continiacion.
+        <p>He visto muchas películas y series, pero mis favoritas están relacionadas con videojuegos o con tecnología o comedia, algunas de ellas son las que veras a continuación.
         </p>
       </div>
       <div class="movies">
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="./image/series/himym.jpg" class="d-block w-100" alt="HIMYM">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/series/loveDR.jpg" class="d-block w-100" alt="LOVE">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/series/halo.jpg" class="d-block w-100" alt="HALO">
+            </div>            
+            <div class="carousel-item">
               <img src="./image/series/avatar.jpg" class="d-block w-100" alt="Avatar">
             </div>
             <div class="carousel-item">
@@ -168,6 +174,7 @@
             <div class="carousel-item">
               <img src="./image/series/spare-parts.jpg" class="d-block w-100" alt="SP">
             </div>
+            
           </div>
 
           <button class="carousel-control-prev" type="button  " data-bs-target="#carouselExampleFade"
@@ -189,11 +196,10 @@
       <div>
         <h2>En busqueda de la Hamburguesa Perfecta</h2>
 
-        <p>Me encata salir por la tarde un fin de semana o despeus de un largo dia de trabajo
-          ir a un restaurante y pedir la hamburguesa de la casa o pedir la mas grande, porque me gsuta
-          catar hamburguesas, Soy Catador de Hamburguesa XD, una cerveza bien fria para acompanar, estas
-          fotos son de las hamburguesas que he considerado que son muy ricas a diferencia de otras, debajo
-          de cada imagen aparece en que posicion la coloco de mi top 5.
+        <p>Me encanta salir por la tarde un fin de semana o después de un largo día de trabajo
+          ir a un restaurante y pedir la hamburguesa de la casa o pedir la más grande, porque me gusta
+          catar hamburguesas, Soy Catador de Hamburguesa XD, una cerveza bien fría para acompañar también me encanta la cerveza artesanal e importada.
+
         </p>
       </div>
       <div class="carrusel_hambur">
@@ -249,14 +255,14 @@
         <div item="item_1">
           <h4>Whats App</h4>
           <a class="btn"
-            href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+            href="https://api.whatsapp.com/send?phone=3338441895&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
             alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
               alt="Whats App ICon"></a>
         </div>
         <div item="item_2">
           <h4>G-Mail</h4>
           <a class="btn"
-            href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+            href="mailto:davidricardoczjz@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
             role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
               alt="Icon G-Mail"></a>
         </div>
