change in carrusel emtechpuebla

--- a/aboutme.html
+++ b/aboutme.html
@@ -139,8 +139,8 @@
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
                             aria-label="Slide 6"></button>
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
-                            aria-label="Slide 7"></button>
-
+                            aria-label="Slide 7">
+                        </button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -199,7 +199,7 @@
                 <p>Obteniendo las siguientes constancias:</p>
             </div>
 
-            <div class="contener_carrusel">
+            <div class="contener_carrusel3">
                 <div class="learning_carru">
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
