--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <section class="emtech">
+        <section class="emtech1">
             <div>
                 <h2>Diplomado en Seguridad para Sistemas Embebidos ITESO 2023-2024</h2>
 
@@ -199,7 +199,7 @@
                 <p>Obteniendo las siguientes constancias:</p>
             </div>
 
-            <div class="contener_carrusel3">
+            <div class="container_curso">
                 <div class="learning_carru">
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
