--- a/aboutme.html
+++ b/aboutme.html
@@ -58,26 +58,26 @@
 
         </section>
 
-        <section>
+        <section class="titulos_2">
             <div>
                 <h2>Estudios Posteriores</h2>
             </div>
         </section>
 
-        <section class="emtech1">
+        <section class="iteso">
             <div>
                 <h2>Diplomado en Seguridad para Sistemas Embebidos ITESO 2023-2024</h2>
 
                 <p>
                     Adentrándome en el mundo de Cyber Seguridad de los sistemas embebidos decidí cursar este diplomado acreditado por la ITESO, Universidad Jesuita de Guadalajara
                     Este diplomado tuvo una duración de 6 meses donde aplicamos diferentes conceptos y obteniendo conocimiento en:
-                </p>   
-                <p>Introducción a la Seguridad / Criptografía / Herramientas de Seguridad Perimetal</p>
-                <p> Desarrollo Seguro para Embebidos / Gestión de la Seguridad / Validación de Seguridad Hackeo Ético</p>
+                
+                Introducción a la Seguridad / Criptografía / Herramientas de Seguridad Perimetal
+                Desarrollo Seguro para Embebidos / Gestión de la Seguridad / Validación de Seguridad Hackeo Ético</p>
 
             </div>
 
-            <div class="contener_carrusel">
+            <div class="contener_carrusel_cripto">
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
