update about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -67,17 +67,16 @@
         <section class="iteso">
             <div>
                 <h2>Diplomado en Seguridad para Sistemas Embebidos ITESO 2023-2024</h2>
-
                 <p>
-                    Adentrándome en el mundo de Cyber Seguridad de los sistemas embebidos decidí cursar este diplomado acreditado por la ITESO, Universidad Jesuita de Guadalajara
-                    Este diplomado tuvo una duración de 6 meses donde aplicamos diferentes conceptos y obteniendo conocimiento en:
+                Adentrándome en el mundo de Cyber Seguridad de los sistemas embebidos decidí cursar este diplomado acreditado por la ITESO, Universidad Jesuita de Guadalajara
+                Este diplomado tuvo una duración de 6 meses donde aplicamos diferentes conceptos y obteniendo conocimiento en:
                 
                 Introducción a la Seguridad / Criptografía / Herramientas de Seguridad Perimetal
                 Desarrollo Seguro para Embebidos / Gestión de la Seguridad / Validación de Seguridad Hackeo Ético</p>
 
             </div>
 
-            <div class="contener_carrusel_cripto">
+            <div class="cripto">
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -91,14 +90,14 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./image/automotriz/diploma_iteso.png" class="d-block w-100" alt="olivia_me">
+                            <img src="./image/automotriz/diploma_iteso.png" class="d-block w-100" alt="iteso">
                         </div>
                         <div class="carousel-item">
-                            <img src="./image/automotriz/modul_iteso.png" class="d-block w-100" alt="certificado_web">
+                            <img src="./image/automotriz/modul_iteso.png" class="d-block w-100" alt="modul_iteso">
                         </div>
                         <div class="carousel-item">
                             <img src="./image/automotriz/clausura.jpg"
-                                class="d-block w-100" alt="Tecnologias Emergentes">
+                                class="d-block w-100" alt="clausura">
                         </div>
                                              
                     </div>
