Update foto perfil y movies

--- a/aboutme.html
+++ b/aboutme.html
@@ -58,6 +58,12 @@
 
             <div>
                 <h2>Estudios Posteriores</h2>
+                <p>
+                    Adentrándome en el mundo de Cyber Seguridad de los sistemas embebidos decidí cursar este diplomado
+                    acreditado por la ITESO, Universidad Jesuita de Guadalajara Este diplomado tuvo una duración de 6 meses
+                    donde aplicamos diferentes conceptos y obteniendo conocimiento en: Introducción a la Seguridad / Criptografía / Herramientas de Seguridad Perimetal
+                     Desarrollo Seguro para Embebidos / Gestión de la Seguridad / Validación de Seguridad Hackeo Ético.
+                </p>
             </div>
 
         </section>
